--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,6 +6,7 @@
     ~/.gitconfig: gitconfig
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: oh-my-zsh/
+    ~/.rbenv: rbenv/
 
 - shell:
   - [git submodule update --init --recursive, Installing/updating submodules]
