--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "rbenv"]
 	path = rbenv
 	url = https://github.com/sstephenson/rbenv.git
+[submodule "ruby-build"]
+	path = ruby-build
+	url = https://github.com/sstephenson/ruby-build.git
