--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,10 @@
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: oh-my-zsh/
     ~/.rbenv: rbenv/
+    ~/.rbenv/plugins/ruby-build:
+        create: true
+        path: ruby-build/
+    ~/.gemrc: gemrc
 
 - shell:
   - [git submodule update --init --recursive, Installing/updating submodules]
