--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     ~/.rbenv: rbenv/
     ~/.gemrc: gemrc
     ~/.gitignore: gitignore
+    ~/.ctags: ctags
 - link:
     ~/.rbenv/plugins/ruby-build:
         create: true
