add solarized tmux

--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.gemrc: gemrc
     ~/.gitignore: gitignore
     ~/.ctags: ctags
+    ~/.tmux.conf: tmux.conf
 - link:
     ~/.rbenv/plugins/ruby-build:
         create: true
