--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,6 +14,7 @@
     ~/.tmux.conf: tmux.conf
     ~/.vim: vim/
     ~/.vimrc: vimrc
+    ~/.emacs.d: prelude/
 - link:
     ~/.rbenv/plugins/ruby-build:
         create: true
