--- a/tmux.conf
+++ b/tmux.conf
@@ -30,3 +30,28 @@ set-option -g display-panes-colour brightred #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
+# Use Alt-arrow keys without prefix key to switch panes
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
+# Pane resizing
+bind M-j resize-pane -D 5
+bind M-k resize-pane -U 5
+bind M-h resize-pane -L 5
+bind M-l resize-pane -R 5
+
+# Mouse
+setw -g mouse on
+
+# # Scroll History
+set -g history-limit 30000
+
+# Allows us to use '<prefix>-a' <command> to send commands to a TMUX session inside 
+# # another TMUX session
+bind a send-prefix
+
+# reload config file (change file location to your the tmux.conf you want to use)
+bind r source-file ~/.tmux.conf
+
