--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -14,7 +14,7 @@
     ~/.tmux.conf: tmux.conf
     ~/.vim: vim/
     ~/.vimrc: vimrc
-    ~/.emacs.d: prelude/
+    ~/.spacemacs: spacemacs
 - link:
     ~/.rbenv/plugins/ruby-build:
         create: true
