--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -5,6 +5,7 @@
 
 - link:
     ~/.gitconfig: gitconfig
+    ~/.zshenv: zshenv
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: oh-my-zsh/
     ~/.rbenv: rbenv/
