--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -23,4 +23,9 @@
     ~/.rbenv/plugins/ruby-build:
         create: true
         path: ruby-build/
+    ~/.oh-my-zsh/custom/plugins/fzf: fzf
+    ~/.oh-my-zsh/custom/plugins/fzf-zsh: fzf-zsh
+
+- shell:
+  - [./fzf/install --bin]
 
