add tmux vim keys, show git hash in status

--- a/tmux.conf
+++ b/tmux.conf
@@ -30,11 +30,17 @@ set-option -g display-panes-colour brightred #orange
 # clock
 set-window-option -g clock-mode-colour green #green
 
-# Use Alt-arrow keys without prefix key to switch panes
+# Use arrow keys to switch panes
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Use vim keys without prefix key to switch panes
+bind -n M-h select-pane -L
+bind -n M-l select-pane -R
+bind -n M-k select-pane -U
+bind -n M-j select-pane -D
 
 # Pane resizing
 bind M-j resize-pane -D 5
