--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,7 +1,8 @@
 - clean: ['~']
 
 - shell:
-  - [git submodule update --init --recursive, Installing/updating submodules]
+  - [git submodule update --init --recursive, installing submodules]
+  - [git submodule update --recursive, updating submodules]
 
 - link:
     ~/.gitconfig: gitconfig
