--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,8 @@
 #### COLOUR (Solarized dark)
 
+# set screen colours
+set -g default-terminal "screen-256color"
+
 # default statusbar colors
 set-option -g status-bg black #base02
 set-option -g status-fg yellow #yellow
