--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -6,7 +6,7 @@
 
 - link:
     ~/.gitconfig: gitconfig
-    ~/.zshenv: zshenv
+    ~/.zprofile: zprofile
     ~/.zshrc: zshrc
     ~/.oh-my-zsh: oh-my-zsh/
     ~/.rbenv: rbenv/
