--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "powerline-fonts"]
 	path = powerline-fonts
 	url = git@github.com:powerline/fonts.git
+[submodule "spacemacs-private/groovy"]
+	path = spacemacs-private/groovy
+	url = git@github.com:dcluna/spacemacs-groovy.git
