--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -26,6 +26,7 @@
         path: ruby-build/
     ~/.oh-my-zsh/custom/plugins/fzf: fzf
     ~/.oh-my-zsh/custom/plugins/fzf-zsh: fzf-zsh
+    ~/.emacs.d/private/groovy: spacemacs-private/groovy/
 
 - shell:
   - [./fzf/install --bin]
