--- a/.gitmodules
+++ b/.gitmodules
@@ -49,3 +49,6 @@
 [submodule "dotbot-asdf"]
 	path = dotbot-asdf
 	url = https://github.com/sobolevn/dotbot-asdf.git
+[submodule "oh-my-zsh-themes/powerlevel9k"]
+	path = oh-my-zsh-themes/powerlevel9k
+	url = https://github.com/bhilburn/powerlevel9k.git
