--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -11,6 +11,7 @@
     ~/.oh-my-zsh: oh-my-zsh/
     ~/.oh-my-zsh/custom/themes:
         create: true
+        force: true
         path: oh-my-zsh-themes
     ~/.rbenv: rbenv/
     ~/.gemrc: gemrc
