--- a/.gitmodules
+++ b/.gitmodules
@@ -52,3 +52,6 @@
 [submodule "oh-my-zsh-themes/powerlevel9k"]
 	path = oh-my-zsh-themes/powerlevel9k
 	url = https://github.com/bhilburn/powerlevel9k.git
+[submodule "vim/bundle/vim-json"]
+	path = vim/bundle/vim-json
+	url = git@github.com:elzr/vim-json.git
