--- a/.gitmodules
+++ b/.gitmodules
@@ -55,3 +55,6 @@
 [submodule "vim/bundle/vim-json"]
 	path = vim/bundle/vim-json
 	url = git@github.com:elzr/vim-json.git
+[submodule "Vundle.vim"]
+	path = Vundle.vim
+	url = git@github.com:VundleVim/Vundle.vim.git
