--- a/tmux.conf
+++ b/tmux.conf
@@ -40,8 +40,22 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-cpu'
-set -g @plugin 'sei40kr/tmux-onedark'
+set -g @plugin 'jatap/tmux-base16-statusline'
+
+# tmux-base16 conf
+# set -g @base16-statusline 'main'
+# set -g @base16-statusline-separator-session-name '@'
+# set -g @base16-statusline-main-separator '|'
+set -g status-right "#{prefix_highlight} #[fg=yellow]%H:%M:%S #[fg=white]#{@main_separator} #[fg=green]%d-%b-%y "
+
+set -g @prefix_highlight_bg black
+set -g @prefix_highlight_fg red
+#set -g @prefix_highlight_prefix_prompt '<CHAR3>'
+set -g @prefix_highlight_show_copy_mode 'on'
+#set -g @prefix_highlight_copy_prompt '<CHAR4> '
+set -g @prefix_highlight_copy_mode_attr "fg=red,bg=black,bold"
+set -g @prefix_highlight_output_prefix ''
+set -g @prefix_highlight_output_suffix ''
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
