--- a/tmux.conf
+++ b/tmux.conf
@@ -1,7 +1,7 @@
 #### COLOUR (Solarized dark)
 
 # set screen colours
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
 
 # Use arrow keys to switch panes
 bind -n M-Left select-pane -L
