--- a/default.conf.yaml
+++ b/default.conf.yaml
@@ -1,11 +1,8 @@
 - clean: ['~']
 
 - link:
-#    ~/.gitconfig: gitconfig
-#    ~/.zprofile: zprofile
     ~/.zshrc: zshrc
-#    ~/.zshenv: zshenv
-    ~/.zgen: zgen
+    ~/.zgenom: zgenom
     ~/.gitignore: gitignore
     ~/.ctags: ctags
     ~/.tmux.conf: tmux.conf
